# Black-Engine

./: .gitignore  CMakeLists.txt  NecessaryInstallation.readme  NecessaryInstallation.sh  README.md
config/: CmakeVariables.h.in  settings.json
docs/SFML-2.4.2/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  NativeActivity_8hpp_source.html  Network_2Export_8hpp_source.html  Network_8hpp_source.html  NonCopyable_8hpp_source.html  (+111 more)
docs/design/Hunting/: ContactingHuntsman.puml  Hunt.puml  PreparingHunt.puml
huntsman/: CMakeLists.txt
huntsman/include/engine/: Fancier.hpp  Huntsman.hpp
huntsman/include/engine/utility/: LoggerHelper.hpp  Settings.hpp  SettingsFacade.hpp  StartupManager.hpp
huntsman/include/engine/view/: Falconer.hpp  HuntingGround.hpp
huntsman/include/engine/view/components/: HuntingGroundChunk.hpp
huntsman/include/global/: Logger.hpp  Macros.hpp
huntsman/include/model/: Object.hpp
huntsman/include/model/hunt/: HuntObject.hpp
huntsman/include/model/hunt/behavior/: Behavior.hpp
huntsman/include/model/hunt/controller/: Hound.hpp  Houndmaster.hpp
huntsman/src/engine/: Fancier.cpp  Huntsman.cpp
huntsman/src/engine/utility/: SettingsFacade.cpp  StartupManager.cpp
huntsman/src/engine/view/: Falconer.cpp  HuntingGround.cpp
huntsman/src/engine/view/components/: HuntingGroundChunk.cpp
huntsman/src/global/: Generators.cpp  Macros.cpp
huntsman/src/model/: Object.cpp
huntsman/src/model/hunt/: HuntObject.cpp
huntsman/src/model/hunt/controller/: Houndmaster.cpp
include/: GameObject.hpp
include/engine/: Huntsman.hpp
include/engine/utility/: LoggerHelper.hpp  Settings.hpp  StartupManager.hpp
include/global/: Generators.hpp
include/model/: GameObject.hpp  Object.hpp
include/model/board/: BoardObject.hpp
include/model/descriptor/: ClassName.hpp
include/model/hunt/: HuntObject.hpp
include/model/hunt/controller/: Hound.hpp
runnable/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/engine/: Huntsman.cpp
src/engine/utility/: Settings.cpp  StartupManager.cpp
src/implementation/: Generators.cpp
src/include/engine/: Huntsman.hpp
src/include/engine/utility/: LoggerHelper.hpp  Settings.hpp
src/include/global/: CmakeVariables.hpp
src/model/: GameObject.cpp  Object.cpp
src/model/board/: BoardObject.cpp
src/model/hunt/controller/: Hound.cpp
src/src/engine/: Huntsman.cpp
src/src/engine/utility/: Settings.cpp  StartupManager.cpp
src/src/model/: Object.cpp
src/src/model/hunt/controller/: Houndmaster.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/COMMON/: TestBase.hpp
tests/MT/: CMakeLists.txt  ModuleTests.cpp
tests/MT/manual/: HuntsmanTests.cpp
tests/MT/runtime/: FancierTests.cpp
tests/MT/startup/: StartupTest.cpp
tests/UT/: CMakeLists.txt  UnitTests.cpp
tests/UT/engine/utility/: StartupManagerTests.cpp
tests/UT/mocks/: HuntsmanMock.hpp  SettingsMock.hpp
tests/UT/tests/engine/utility/: StartupManagerTests.cpp
