CMAKE_MINIMUM_REQUIRED( VERSION 3.9 )
SET( CMAKE_CXX_STANDARD 17 )
INCLUDE( ExternalProject )

PROJECT( Black-Engine )
ENABLE_TESTING()

INCLUDE_DIRECTORIES( include )

IF( ${BUILD_OFFLINE} )
	SET_PROPERTY( DIRECTORY ${myrootproject_SOURCE_DIR}
				  PROPERTY EP_UPDATE_DISCONNECTED 1 )
ENDIF()

SET( ERROR_FLAGS "-Wall -Werror -Wextra -Wfatal-errors -pedantic-errors" )

SET( SFML_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/sfml )
SET( SPDLOG_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/spdlog )

EXTERNALPROJECT_ADD( SFML
					 GIT_REPOSITORY https://github.com/SFML/SFML
					 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${SFML_INSTALL_LOCATION}
					 )
EXTERNALPROJECT_ADD( SPDLOG
					 GIT_REPOSITORY https://github.com/gabime/spdlog
					 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${SPDLOG_INSTALL_LOCATION}
					 )

INCLUDE_DIRECTORIES( ${SFML_INSTALL_LOCATION}/include )
LINK_DIRECTORIES( ${SFML_INSTALL_LOCATION}/lib )

INCLUDE_DIRECTORIES( ${SPDLOG_INSTALL_LOCATION}/include )
LINK_DIRECTORIES( ${SPDLOG_INSTALL_LOCATION}/lib )

ADD_SUBDIRECTORY( src )

ENABLE_TESTING()
ADD_SUBDIRECTORY( tests )

