SET( GTEST_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/gtest )

EXTERNALPROJECT_ADD( GTEST
					 GIT_REPOSITORY https://github.com/google/googletest
					 CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${GTEST_INSTALL_LOCATION}
					 GIT_SHALLOW TRUE
					 UPDATE_DISCONNECTED TRUE
					 )

INCLUDE_DIRECTORIES( ${GTEST_INSTALL_LOCATION}/include )
LINK_DIRECTORIES( ${GTEST_INSTALL_LOCATION}/lib )

ADD_SUBDIRECTORY( UT )
ADD_SUBDIRECTORY( MT )
